Use crafting table recipe preview and improve engine lore